# Moveit2

./: .gitignore  README.md  build.sh  run.sh
install/: local_setup.sh  setup.sh
install/moveit_arm/share/moveit_arm/: local_setup.sh  package.sh  package.zsh
install/moveit_arm/share/moveit_arm/config/: moveit_controllers.yaml  simple_arm.urdf.xacro
install/my_arm/share/my_arm/: .setup_assistant  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/simple_arm/share/simple_arm/: local_setup.dsv  local_setup.sh  package.dsv  package.sh
log/: latest_build  latest_list
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/miniarm/: .setup_assistant  CMakeLists.txt  package.xml
src/miniarm/config/: moveit_controllers.yaml  ros2_controllers.yaml  simple_arm.ros2_control.xacro  simple_arm.srdf  simple_arm.urdf.xacro
src/miniarm/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/moveit_arm/: CMakeLists.txt
src/moveit_arm/config/: gazebo_simple_arm.urdf.xacro  initial_positions.yaml  moveit.rviz  ros2_controllers.yaml  simple_arm.srdf
src/moveit_arm/launch/: move_group.launch.py  rsp.launch.py
src/simple_arm/: CMakeLists.txt  package.xml
src/simple_arm/config/: joint_names_simple_arm_01.yaml
src/simple_arm/meshes/: P2_Link.STL
src/simple_arm/rviz/: urdf.rviz
src/simple_arm/urdf/: miniarm.urdf  simple_arm.csv
(+40 files in other folders)
